tests/sumo/errors/routes/false_route2/errors.sumo
Error: Attribute 'route' in definition of vehicle '0' is empty.
Error: route cannot be empty
Quitting (on error).
